--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
     Curso de dev ops alura teste titulo
 <ul>
-    <li>Vagrant: Gerenciando máquinas viruais a</li>
+    <li>Item 01</li>
     <li>Item 02</li>
     <li>Item 03</li>
 </ul>
