--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <body>
     Curso de dev ops alura teste titulo
 <ul>
-    <li>Item 01</li>
-    <li>Item 02</li>
-    <li>Hubernet</li>
+    <li>Vagrant: Gerenciando maquinas virtuais</li>
+    <li>Docker: Criando containers sem dor de cabeça</li>
+    <li>Item 03</li>
 </ul>
 </body>
 </html>
